Bump __FreeBSD_version for r301602.

Reported by:	ngie, Ben Lavery
PR:		210229
Approved by:	re (gjb)

Former-commit-id: 4b60cadea98b07287ff0ee8a488463df46781688